--- a/Lab1KG/Lab1KG.csproj
+++ b/Lab1KG/Lab1KG.csproj
@@ -47,8 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseShape.cs" />
-    <Compile Include="Circle.cs" />
-    <Compile Include="Rectangle.cs" />
+    <Compile Include="Model.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
